[gd_scene load_steps=11 format=3 uid="uid://d2bc2u6jj35ye"]

[ext_resource type="Script" path="res://prefabs/player.gd" id="1_amscm"]
[ext_resource type="PackedScene" uid="uid://cj13uvr8r1fd1" path="res://prefabs/projectile.tscn" id="2_0mkeo"]
[ext_resource type="PackedScene" uid="uid://c5rfedoixoiq" path="res://prefabs/cast_zone.tscn" id="2_u0rwp"]
[ext_resource type="PackedScene" uid="uid://c5ig11vdx3oin" path="res://prefabs/hurtable.tscn" id="3_slg3q"]
[ext_resource type="PackedScene" uid="uid://beco7krhnq4iv" path="res://prefabs/casting_charge.tscn" id="4_36qq3"]
[ext_resource type="PackedScene" uid="uid://bhv7pajr0kgm2" path="res://prefabs/kill_counter.tscn" id="4_w2hkj"]
[ext_resource type="PackedScene" uid="uid://cqe7cl3e7njlu" path="res://prefabs/health_bar.tscn" id="5_h7ldm"]
[ext_resource type="PackedScene" uid="uid://cycqpw2bwn0tg" path="res://prefabs/health_label.tscn" id="6_i8mwl"]
[ext_resource type="PackedScene" uid="uid://dx6h1xnkc4m63" path="res://prefabs/blood_vision.tscn" id="7_66ukh"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_u3wxe"]

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_amscm")
projectile_prefab = ExtResource("2_0mkeo")

[node name="Hurtable" parent="." instance=ExtResource("3_slg3q")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_u3wxe")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
target_position = Vector3(0, 0, -1000)
collision_mask = 3

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="ProjectileSpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Crosshair" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.0
offset_top = -9.0
offset_right = 9.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.176471)

[node name="CastZone" parent="CanvasLayer" instance=ExtResource("2_u0rwp")]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 84.0
offset_bottom = 50.0

[node name="HealthBar" parent="CanvasLayer/VBoxContainer" node_paths=PackedStringArray("hurtable") instance=ExtResource("5_h7ldm")]
layout_mode = 2
hurtable = NodePath("../../../Hurtable")

[node name="KillCounter" parent="CanvasLayer/VBoxContainer" instance=ExtResource("4_w2hkj")]
layout_mode = 2

[node name="HealthLabel" parent="CanvasLayer/VBoxContainer" instance=ExtResource("6_i8mwl")]
layout_mode = 2

[node name="BloodVision" parent="CanvasLayer" instance=ExtResource("7_66ukh")]

[node name="DeathScreen" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/DeathScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -29.0
offset_right = 37.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/DeathScreen/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DeathScreen/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/DeathScreen/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "You Died!"

[node name="RestartButton" type="Button" parent="CanvasLayer/DeathScreen/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Restart
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="CastingCharge" parent="." instance=ExtResource("4_36qq3")]

[connection signal="timeout" from="CooldownTimer" to="." method="shoot_anim_done"]
